--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -47,7 +47,8 @@ button:hover {
   background-color: transparent;
   background-position: 30px;
   background-size: 15px 15px;
-  padding-bottom: 14em;
+  height: 100%;
+  width: 100%;
 }
 
 .main-nav {
