--- a/client/stylesheets/activeRooms.scss
+++ b/client/stylesheets/activeRooms.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
+
 .curr-active-rooms {
   display: flex-col;
   width: 100%;
@@ -5,17 +7,20 @@
   flex-wrap: wrap;
   justify-content: center;
   align-self: center;
-  gap: 2rem;
+  gap: 1rem;
   padding: 1rem;
   max-width: 100%;
 
   h1 {
-    color:rgb(64, 63, 71);
+    font-family: 'Reenie Beanie', cursive;
+    font-size: 4rem;
+    color:rgb(0, 0, 0);
     align-self: center;
     text-align: center;
     padding: 25px;
   }
 }
+
 .grid-container {
   display: flex;
   flex-wrap: wrap;
@@ -27,62 +32,120 @@
 .grid-item {
   display: flex;
   margin-top: 25px;
-  cursor: pointer;
-  background-color: rgb(244, 200, 160);
-  height: 320px;
-  width: 220px;
+  background-color: rgb(255, 243, 162);
+  height: 15rem;
+  width: 15rem;
   perspective: 1000px;
-  border:rgb(88, 84, 84) solid;
-  border-radius: 1rem;
+  // border:rgb(88, 84, 84) solid;
+  // border-radius: rem;
   opacity: 1;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   align-items: center;
+  justify-content: center;
+  text-decoration:none;
+  color:#000;
+  padding:1em;
+  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+  transition: transform .15s linear;
+}
+
+.grid-item:nth-child(even){
+  transform:rotate(4deg);
+  position:relative;
+  top:5px;
+  background-color: #cfc;
+}
+
+.grid-item:nth-child(3n){
+  transform:rotate(-3deg);
+  position:relative;
+  top:-5px;
+  background-color: #ccf;
+}
+
+.grid-item:nth-child(5n){
+  transform:rotate(5deg);
+  position:relative;
+  top:-10px;
+}
+
+.grid-item:hover, .grid-item:focus{
+  box-shadow:10px 10px 7px rgba(0,0,0,.7);
+  transform: scale(1.25);
+  position:relative;
+  z-index:5;
+}
+
+.join-btn {
+  opacity: 0;
+  padding: 0.7rem;
+  font-family: 'Reenie Beanie', cursive;
+  font-size: 1.3rem;
+  border: 2px rgb(92, 92, 92) dashed;
+  border-radius: 2px;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.join-btn:hover{
+    background-color: $background-color-light;
+    cursor: pointer;
+}
+
+.grid-item:hover .join-btn{
+  opacity: 1;
 }
 
 .grid-item-front {
   position: absolute;
-}
 
-.grid-item-back {
-  display:flex-col;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(255, 225, 208);
-  opacity: 0;
-  border-radius: 1rem;
-  transition: 0.3s ease;
-  cursor: auto;
-
-  :hover {
-    opacity: 1;
-  }
-
-  h2 {
+  p{
+    font-family: 'Reenie Beanie', cursive;
+    font-size: 3.5rem;
     padding: 1rem;
-    padding-top: 3rem;
   }
 }
 
-.grid-item-back:hover {
-  opacity: 1;
-}
+// .grid-item-back {
+//   display:flex-col;
+//   align-items: center;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgb(251, 231, 121);
+//   opacity: 0;
+//   // border-radius: 1rem;
+//   transition: 0.3s ease;
+//   cursor: auto;
 
-.hover-btns {
-  padding-top: 3rem;
-  align-self: center;
+//   :hover {
+//     opacity: 1;
+//   }
 
-  button {
-    opacity: 1;
-    background-color: white;
-    padding: 10px;
-    border-radius: 0.3rem;
-    cursor: pointer;
-  }
+//   h2 {
+//     padding: 1rem;
+//     padding-top: 3rem;
+//   }
+// }
 
-  button:hover {
-    background-color: rgb(171, 222, 233);
-    color: rgb(50, 50, 50);
-  }
-}
+// .grid-item-back:hover {
+//   opacity: 1;
+// }
+
+// .hover-btns {
+//   padding-top: 3rem;
+//   align-self: center;
+
+//   button {
+//     opacity: 1;
+//     background-color: white;
+//     padding: 10px;
+//     border-radius: 0.3rem;
+//     cursor: pointer;
+//   }
+
+//   button:hover {
+//     background-color: rgb(171, 222, 233);
+//     color: rgb(50, 50, 50);
+//   }
+// }
