--- a/client/stylesheets/activeRooms.scss
+++ b/client/stylesheets/activeRooms.scss
@@ -97,12 +97,14 @@
 .grid-item-front {
   position: absolute;
 
-  p{
+
+  #active-room-name{
     font-family: 'Reenie Beanie', cursive;
     font-size: 3.5rem;
     padding: 1rem;
   }
 }
+
 
 // .grid-item-back {
 //   display:flex-col;
