--- a/client/stylesheets/login.scss
+++ b/client/stylesheets/login.scss
@@ -8,10 +8,11 @@
   input {
     background-color: $card-background;
   }
+  margin-bottom: 15em;
 }
 
 #main-logo {
-  margin: 60px 0 10px 0;
+  margin: 0px 0 10px 0;
   font-size: 60px;
   color: $accent-color;
   text-align: center;
